--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag substrate-referenda-alert:$(date +%s)
-    - name: Publish to Docker Hub
-      uses: docker/build-push-action@v1
+      run: docker build . --file Dockerfile --tag substrate-referenda-alert:${{ github.run_number }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        registry: substrate-referenda-alert
-        tags: latest, ${{ github.run_number }}
+    - name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: stkdio/substrate-referenda-alert:latest, ${{ github.run_number }}
