added chain name

--- a/charts/substrate-referenda-alert/values.yaml
+++ b/charts/substrate-referenda-alert/values.yaml
@@ -6,3 +6,4 @@ wallet_address: "Fq4YmiAq76DntjMKKjMiL98MYszoApUa9idSErvyzfdGoqG"
 WSS_URL: "wss://kusama-rpc.polkadot.io/"
 SLACK_API: ""
 SLACK_CHANNEL_NAME: ""
+CHAIN_NAME: "kusama"
